General Aesthetic updates
- Added repo list back to logged in homepage
- Moved partials only used by one thing (layouts) out of shared
- Using standard partial repos/_repo.html.erb to standardize rendering repos in a list
- Made CodeTriage a link in the header
- Fixed various whitespace issues

--- a/app/views/layouts/_head.html.erb
+++ b/app/views/layouts/_head.html.erb
@@ -45,7 +45,7 @@
             <li class="active"><%= link_to 'Sign in', new_user_registration_path %></li>
           <%- end -%>
         </ul>
-        <h3 class="muted">CodeTriage</h3>
+        <h3 class="muted"><%= link_to "CodeTriage", root_path %></h3>
       </div>
 
       <% [:notice, :error, :alert].each do |level| %>
