--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,8 +1,5 @@
-<%= render 'shared/head' %>
-
-      <!-- yield -->
-      <div class="row marketing buffer">
-        <%= yield %>
-      </div>
-
-<%= render 'shared/footer' %>
+<%= render 'layouts/head' %>
+  <div class="row marketing buffer">
+    <%= yield %>
+  </div>
+<%= render 'layouts/footer' %>
