--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -1,17 +1,15 @@
-<%= render 'shared/head' %>
+<%= render 'layouts/head' %>
+  <% unless user_signed_in? %>
+    <!-- jumbotron -->
+    <div class="jumbotron">
+      <h1>Help your favorite open source projects</h1>
+      <p class="lead">Sign up to receive a different open issue in your inbox every day from your favorite Github repos</p>
+      <a class="btn btn-large btn-success" href="<%= new_user_registration_path %>">Sign up today</a>
+    </div>
+  <% end -%>
 
-      <% unless user_signed_in? %>
-        <!-- jumbotron -->
-        <div class="jumbotron">
-          <h1>Help your favorite open source projects</h1>
-          <p class="lead">Sign up to receive a different open issue in your inbox every day from your favorite Github repos</p>
-          <a class="btn btn-large btn-success" href="<%= new_user_registration_path %>">Sign up today</a>
-        </div>
-      <% end -%>
-
-      <!-- yield -->
-      <div class="row marketing">
-        <%= yield %>
-      </div>
-
-<%= render 'shared/footer' %>
+  <!-- yield -->
+  <div class="row marketing">
+    <%= yield %>
+  </div>
+<%= render 'layouts/footer' %>
