--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -3,7 +3,7 @@
     <!-- jumbotron -->
     <div class="jumbotron">
       <h1>Help your favorite open source projects</h1>
-      <p class="lead">Sign up to receive a different open issue in your inbox every day from your favorite Github repos</p>
+      <p class="lead">Sign up to receive a different open issue in your inbox every day from your favorite GitHub repos</p>
       <a class="btn btn-large btn-success" href="<%= new_user_registration_path %>">Sign up today</a>
     </div>
   <% end -%>
