--- a/app/views/pages/show/how.html.erb
+++ b/app/views/pages/show/how.html.erb
@@ -1,7 +1,7 @@
 <h2>How:</h2>
 
 <p>
-Code triage is a simple app for a complex problem if you're interested you can <%= link_to "view the code on Github", "github.com/codetriage/codetriage" %>. After you've signed up with your Github credentials you can add a repo to triage by visiting <%= "the repos page", repos_path %>. Once a repo is successfully added you can subscribe to that repositories issues. Once subscribed, you'll receive an email a day with an open issue. All of this is powered by <a href='http://heroku.com'>Heroku</a> and <a href='https://github.com/defunkt/resque'>Resque</a> and powered by a <a href='http://www.postgresql.org/'>PostgreSQL</a> database.
+Code triage is a simple app for a complex problem if you're interested you can <%= link_to "view the code on GitHub", "github.com/codetriage/codetriage" %>. After you've signed up with your GitHub credentials you can add a repo to triage by visiting <%= "the repos page", repos_path %>. Once a repo is successfully added you can subscribe to that repositories issues. Once subscribed, you'll receive an email a day with an open issue. All of this is powered by <a href='http://heroku.com'>Heroku</a> and <a href='https://github.com/defunkt/resque'>Resque</a> and powered by a <a href='http://www.postgresql.org/'>PostgreSQL</a> database.
 </p>
 
 <h2>Finding Issues</h2>
