--- a/app/views/users/after_signup/set_privacy.html.erb
+++ b/app/views/users/after_signup/set_privacy.html.erb
@@ -1,6 +1,6 @@
 <h2>Set Privacy</h2>
 <p>
-  By default when you subscribe to a repo to triage, that information will be public knowledge. We think this is a good thing, you're helping out the open source community so why not share the fun? We won't share your email, or anything else, just your Github username and the repo you are subscribing to. It might look something like this:
+  By default when you subscribe to a repo to triage, that information will be public knowledge. We think this is a good thing, you're helping out the open source community so why not share the fun? We won't share your email, or anything else, just your GitHub username and the repo you are subscribing to. It might look something like this:
 </p>
 <div style='height:50px; border: solid 1px black; display:inline-block; padding: 0 100px 0 0; border-radius: 5px'>
   <%= image_tag current_user.avatar_url,  class: 'img-rounded', style: "height: 40px; margin: 5px" %>
