--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,7 +2,7 @@
   <h3>Email:</h3>
   <p><%= @user.email %></p>
 
-  <h3>Github:</h3>
+  <h3>GitHub:</h3>
   <p><%= "@#{@user.github }"%></p>
 
   <h3>Publicly visible?:</h3>
