[close #70] Fix private accounts
Don't show a user's personal account if they are private, never show a users email unless they are viewing their own email.

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,9 @@
 <div class="span4">
-  <h3>Email:</h3>
-  <p><%= @user.email %></p>
+  <% if current_user && current_user == @user %>
+    <h3>Email:</h3>
+    <p><%= @user.email %></p>
+    <small class='muted'>Only visible to you</small>
+  <% end %>
 
   <h3>GitHub:</h3>
   <p><%= "@#{@user.github }"%></p>
