--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -22,10 +22,20 @@
 </div>
 
 <div class="span2 well">
-  <%= link_to "Edit my account", edit_user_path(@user), :class => 'btn btn-primary', :style => 'margin-bottom: 5px' %>
+  <% if current_user.blank? %>
 
-  <%= link_to user_path(@user), method: "delete", confirm: "#{t("web-app-theme.confirm", :default => "Are you sure?")}", class:  'btn btn-danger' do %>
-    <i class="icon-trash icon-white"></i> Delete my account
-  <% end -%>
+    Are you <%= @user.github %>?<br />
+    <span class="active"><%= link_to 'Login', new_user_registration_path %></span>
+    to edit your account
 
+  <% elsif current_user == @user %>
+    <%= link_to "Edit my account", edit_user_path(@user), :class => 'btn btn-primary', :style => 'margin-bottom: 5px' %>
+
+    <%= link_to user_path(@user), method: "delete", confirm: "#{t("web-app-theme.confirm", :default => "Are you sure?")}", class:  'btn btn-danger' do %>
+      <i class="icon-trash icon-white"></i> Delete my account
+    <% end %>
+
+  <% else %>
+    This isn't your account, jump to <%= link_to current_user.github, current_user %>
+  <% end %>
 </div>
