Added favorite languages selection, only Repos of favorite languages will be shown
Added ar_pg_array to add favorite_languages array inside User
Changed repo list to return all repos if user doesn't have favorite_languages

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -19,6 +19,25 @@
     <%= link_to "Make account public", users_path(user: {private: false}), method: :put, :class => 'btn btn-primary'  %>
   <% end %>
 
+  <h3>Favorite Languages:</h3>
+
+  <p>Select your favorite languages:</p>
+
+  <%= form_for @user do |f| %>
+
+    <% Repo.all_languages.each do |language| %>
+      <label class="checkbox">
+        <%= f.check_box :favorite_languages, { multiple: true }, language, nil %>
+        <%= language %>
+      </label>
+    <% end %>
+
+    <p>
+      <%= button_tag "Save", :class => "btn btn-primary" %>
+    </p>
+
+  <% end %>
+
 </div>
 
 <div class="span2 well">
