add body to issues and send_triage mail #98

--- a/app/views/user_mailer/send_triage.html.erb
+++ b/app/views/user_mailer/send_triage.html.erb
@@ -1,6 +1,12 @@
-Hello <%= @user.github %>,
+<p>
+	Hello <%= @user.github %>,
+</p>
 
 <h2><%= link_to @issue.title, @issue.html_url %></h2>
+
+<h2>Description</h2>
+
+<%= raw BlueCloth.new(@issue.body).to_html %> 
 
 <hr />
 
