--- a/app/views/user_mailer/poke_inactive.text.erb
+++ b/app/views/user_mailer/poke_inactive.text.erb
@@ -1,22 +1,30 @@
 Hello <%= @user.github %>,
 
-You signed up to make a difference by triaging issues in github, which is great, but you didn't actually subscribe to any projects. To fix this just click on a link below, sign in, then click on the giant "subscribe" button:
+You signed up to make a difference by triaging issues in github, which is
+great, but you didn't actually subscribe to any projects. To fix this just
+click on a link below, sign in, then click on the giant "subscribe" button:
 
 Help the repo with the most issues:
-<%= link_to @most_repo.username_repo, repo_url(@most_repo) %>
+<%= @most_repo.username_repo %> (<%= repo_url(@most_repo) %>)
 
 Help a repo in need:
-<%= link_to @need_repo.username_repo , repo_url(@need_repo) %>
+<%= @need_repo.username_repo %> (<%= repo_url(@need_repo) %>)
 
 Help a random repo:
-<%= link_to @random_repo.username_repo, repo_url(@random_repo) %>
+<%= @random_repo.username_repo =%> (<%= repo_url(@random_repo) %>)
 
-If you don't like any of those <%= link_to "add your own", new_repo_url %> repo, <%= link_to "browse existing " , repos_url %> repos, or you can even subscribe to <%= link_to "code triage itself", File.join(root_url, "/codetriage/codetriage") %>. The important part is that you pick something to triage, or you will get this same email next week, maybe with different repos.
+If you don't like any of those add your own repo (<%= new_repo_url %>), browse
+existing repos (<%= repos_url %>), or you can even subscribe to code triage
+itself (<%=  File.join(root_url, "/codetriage/codetriage") %>).
+The important part is that you pick something to triage, or you will get this
+same email next week, maybe with different repos.
 
-To unsubscribe entirely <%= link_to "delete your account", user_url(@user) %> but don't do that, subscribe to an issue above and do some good in the world. I believe in you.
+To unsubscribe entirely delete your account (<%= user_url(@user) %>) but don't
+do that, subscribe to an issue above and do some good in the world. I believe
+in you.
 
 --
-<%= link_to "@schneems", "http://twitter.com/schneems" %>
+@schneems (http://twitter.com/schneems)
 
 
-<%= link_to "unsubscribe", user_url(@user) %>
+unsubscribe: <%= user_url(@user) %>
