--- a/app/views/user_mailer/send_daily_triage.text.erb
+++ b/app/views/user_mailer/send_daily_triage.text.erb
@@ -12,4 +12,4 @@ Here are some issues you should check out:
 Go forth and make the world a better place
 @schneems (http://twitter.com/schneems)
 
-
+Help triage more repos at codetriage.com: <%= root_url %>
