--- a/app/views/user_mailer/send_daily_triage.html.erb
+++ b/app/views/user_mailer/send_daily_triage.html.erb
@@ -20,4 +20,4 @@ Hello @<%= @user.github %>,
 
 <p>Go forth and make the world a better place</p>
 <a href='http://twitter.com/schneems'>@schneems</p>
-
+<p><%= link_to 'Help triage more repos at codetriage.com', root_url %></p>
