--- a/app/views/shared/_repos.html.erb
+++ b/app/views/shared/_repos.html.erb
@@ -1,27 +1,29 @@
 <% lang_index = 0 %>
-
-<ul class="nav nav-tabs" data-tabs="tabs" id="repo-tabs">
-  <% repos.group_by(&:language).each do |lang, repos| %>
-    <% unless lang == nil %>
-      <li><a href="#<%= "#{lang.parameterize}#{lang.hash}" %>" data-toggle="tab"><%= lang %></a></li>
+<div class="row">
+  <ul class="nav nav-tabs nav-stacked span2" data-tabs="tabs" id="repo-tabs">
+    <% repos.group_by(&:language).each do |lang, repos| %>
+      <% unless lang == nil %>
+        <li><a href="#<%= "#{lang.parameterize}#{lang.hash}" %>" data-toggle="tab"><%= lang %></a></li>
+      <% end -%>
     <% end -%>
-  <% end -%>
-</ul>
+  </ul>
 
-<div class="tab-content">
-  <% repos.group_by(&:language).each do |lang, repos| %>
-    <% unless lang == nil %>
-      <div class="tab-pane<%= " active" if lang_index == 0 %>" id="<%= "#{lang.parameterize}#{lang.hash}" %>">
-        <ul class="unstyled repos-list">
-          <% repos.each do |repo| %>
-            <li>
-              <%= render repo %><%# repos/_repo.html.erb  %>
-            </li>
-          <% end -%>
-        </ul>
-      </div>
-      <% lang_index = lang_index + 1 %>
+  <div class="tab-content span5">
+    <% repos.group_by(&:language).each do |lang, repos| %>
+      <% unless lang == nil %>
+        <div class="tab-pane<%= " active" if lang_index == 0 %>" id="<%= "#{lang.parameterize}#{lang.hash}" %>">
+          <ul class="unstyled repos-list">
+            <% repos.each do |repo| %>
+              <li>
+                <%= render repo %><%# repos/_repo.html.erb  %>
+              </li>
+            <% end -%>
+          </ul>
+        </div>
+        <% lang_index = lang_index + 1 %>
+      <% end -%>
     <% end -%>
-  <% end -%>
+  </div>
 </div>
+
 <%= link_to "Submit a Repo", new_repo_path, :class => 'btn btn-success' %>
