--- a/app/views/layouts/_head.html.erb
+++ b/app/views/layouts/_head.html.erb
@@ -35,7 +35,7 @@
       <div class="masthead">
         <ul class="nav nav-pills pull-right">
           <%- if user_signed_in? -%>
-            <li><%= image_tag current_user.avatar_url, class: 'img-rounded', heigh: 30, width: 30 %></li>
+            <li><%= image_tag current_user.avatar_url, class: 'img-rounded', height: 30, width: 30 %></li>
             <li><%= link_to "Home", root_path %></li>
             <li><%= link_to current_user.github, current_user %></li>
             </li>
