--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -1,10 +1,8 @@
-@import "twitter/bootstrap/bootstrap";
 body {
 	padding-top: 60px;
 	padding-left: 20px;
 }
 
-@import "twitter/bootstrap/responsive";
 
 // Set the correct sprite paths
 @iconSpritePath: asset-path('twitter/bootstrap/glyphicons-halflings.png');
@@ -13,6 +11,8 @@ body {
 // Set the Font Awesome (Font Awesome is default. You can disable by commenting below lines)
 // Note: If you use asset_path() here, your compiled boostrap_and_overrides.css will not
 //       have the proper paths. So for now we use the absolute path.
+
+
 @fontAwesomeEotPath: '/assets/fontawesome-webfont.eot';
 @fontAwesomeWoffPath: '/assets/fontawesome-webfont.woff';
 @fontAwesomeTtfPath: '/assets/fontawesome-webfont.ttf';
@@ -21,7 +21,7 @@ body {
 
 
 // Font Awesome
-@import "fontawesome";
+// @import "fontawesome";
 
 // Your custom LESS stylesheets goes here
 //
