--- a/app/views/shared/_repos.html.erb
+++ b/app/views/shared/_repos.html.erb
@@ -13,7 +13,7 @@
       <% unless lang == nil %>
         <div class="tab-pane<%= " active" if lang_index == 0 %>" id="<%= "#{lang.parameterize}#{lang.hash}" %>">
           <ul class="unstyled repos-list">
-            <%= render partial: 'repos/repo', collection: repos, layout: 'shared/spacer_li' %>
+            <%= render partial: 'repos/repo', collection: repos %>
           </ul>
         </div>
         <% lang_index = lang_index + 1 %>
