better delete account flow

--- a/app/views/user_mailer/send_daily_triage.text.erb
+++ b/app/views/user_mailer/send_daily_triage.text.erb
@@ -13,3 +13,4 @@ Go forth and make the world a better place
 @schneems (http://twitter.com/schneems)
 
 Help triage more repos at codetriage.com: <%= root_url %>
+Delete Account: <%= user_url @user %>
