--- a/app/views/user_mailer/poke_inactive.html.erb
+++ b/app/views/user_mailer/poke_inactive.html.erb
@@ -21,5 +21,5 @@ To unsubscribe entirely <%= link_to "delete your account", user_url(@user) %> bu
 
 <br />
 <hr />
-<%= link_to "unsubscribe", user_url(@user) %><br />
+<%= link_to "Delete Account", user_url(@user) %><br />
 </p>
