--- a/app/views/layouts/_head.html.erb
+++ b/app/views/layouts/_head.html.erb
@@ -24,7 +24,7 @@
   </head>
 
   <body>
-    <a href="https://github.com/codetriage/codetriage"><img style="position: absolute; top: 0; left: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_left_darkblue_121621.png" alt="Fork me on GitHub"></a>
+    <a class="hidden-xs" href="https://github.com/codetriage/codetriage"><img style="position: absolute; top: 0; left: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_left_darkblue_121621.png" alt="Fork me on GitHub"></a>
     <div class="container-narrow" id="getting-started">
 
       <div class="row">
