--- a/app/views/user_mailer/send_daily_triage.md.erb
+++ b/app/views/user_mailer/send_daily_triage.md.erb
@@ -18,6 +18,6 @@ Go forth and make the world a better place
 
 [Help triage more repos at codetriage.com](<%= root_url%>)
 
-[Delete Account](<%= user_url(@user) %>)
+[Delete Account](<%= token_delete_user_url(@user.account_delete_token) %>)
 
 
