--- a/app/views/repos/show.html.erb
+++ b/app/views/repos/show.html.erb
@@ -62,10 +62,12 @@
 
 <hr />
 <h2><%= @issues.total_entries %> open issues in <%= @repo.username_repo %></h2>
-<div>
+
+<div class="digg_pagination">
   <div clas="page_info">
     <%= page_entries_info @issues %>
   </div>
+  <br />
   <%= will_paginate @issues, :container => false %>
 </div>
 <br />
