Cleanup ReposController#new

--- a/app/views/repos/new.html.erb
+++ b/app/views/repos/new.html.erb
@@ -14,15 +14,15 @@
 
     <div class="tab-content ">
       <div class="tab-pane active" id="own">
-        <%= render 'shared/add_repos_list', repos: @own_repos %>
+        <%= render 'shared/add_repos_list', repos: own_repos %>
       </div>
 
       <div class="tab-pane active" id="starred">
-        <%= render 'shared/add_repos_list', repos: @starred_repos %>
+        <%= render 'shared/add_repos_list', repos: starred_repos %>
       </div>
 
       <div class="tab-pane active" id="watched">
-        <%= render 'shared/add_repos_list', repos: @watched_repos %>
+        <%= render 'shared/add_repos_list', repos: watched_repos %>
       </div>
     </div>
 
