--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <%= render 'layouts/head' %>
-  <div class="row marketing buffer">
+  <div class="row-fluid marketing buffer">
     <%= yield %>
   </div>
 <%= render 'layouts/footer' %>
