--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -14,7 +14,7 @@
   <% end -%>
 
   <!-- yield -->
-  <div class="row marketing">
+  <div class="row-fluid marketing">
     <%= yield %>
   </div>
 <%= render 'layouts/footer' %>
