--- a/app/views/shared/_repos.html.erb
+++ b/app/views/shared/_repos.html.erb
@@ -1,6 +1,6 @@
 <% lang_index = 0 %>
-<div class="row">
-  <ul class="nav nav-tabs nav-stacked span2" data-tabs="tabs" id="repo-tabs">
+<div class="row-fluid">
+  <ul class="nav nav-tabs nav-stacked span4" data-tabs="tabs" id="repo-tabs">
     <% repos.group_by(&:language).each do |lang, repos| %>
       <% unless lang == nil %>
         <li><a href="#<%= "#{lang.parameterize}#{lang.hash}" %>" data-toggle="tab"><%= lang %></a></li>
@@ -8,7 +8,7 @@
     <% end -%>
   </ul>
 
-  <div class="tab-content span5">
+  <div class="tab-content span8">
     <% repos.group_by(&:language).each do |lang, repos| %>
       <% unless lang == nil %>
         <div class="tab-pane<%= " active" if lang_index == 0 %>" id="<%= "#{lang.parameterize}#{lang.hash}" %>">
