#230 Replace PUT with PATCH for repos
 - Rails 4 by default uses PATCH for updating records. So the Edit repo
   link generated PATCH link.
 - Changing the route from PUT to PATCH, the incoming request is
   successfully directed to repos#update action.

--- a/app/views/repos/show.html.erb
+++ b/app/views/repos/show.html.erb
@@ -26,7 +26,7 @@
 
 <p>
   <% if user_signed_in? && current_user.able_to_edit_repo?(@repo) %>
-    <%= link_to "Edit this repo", edit_repo_path(@repo), class: 'btn btn-mini' %>
+    <%= link_to "Edit this repo", edit_repo_path(@repo), class: 'btn btn-primary' %>
   <% end -%>
 
   <% if @repo_sub %>
@@ -79,5 +79,3 @@
     <% end %>
   </ul
 <hr />
-
-
