--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,17 +1,36 @@
 <div class="clearfix">
-   <%= f.label :email, t("activerecord.attributes.user.email", :default => "Email"), :class => :label %>
-  <div class="input">
-    <%= f.text_field :email, :class => 'text_field' %>
+   <%= f.label :email, t("activerecord.attributes.user.email", :default => "Email"), :class => "label label-info" %>
+   <div class="controls">
+      <div class="input-prepend">
+        <span class="add-on"><i class="icon-envelope"></i></span>
+        <%= f.text_field :email, :class => 'text_field' %>
+    </div>
   </div>
-   <%= f.label :daily_issue_limit, t("activerecord.attributes.user.daily_issue_limit", :default => "Max # of issues you want to receive per day"), :class => :label %>
+   <%= f.label :daily_issue_limit, t("activerecord.attributes.user.daily_issue_limit", :default => "Max # of issues you want to receive per day"), :class => "label label-info" %>
   <div class="input">
     <%= f.number_field :daily_issue_limit, :class => 'number_field' %>
   </div>
-  <%= f.label :skip_issues_with_pr, t("activerecord.attributes.user.skip_issues_with_pr", :default => "Skip Issues with Pull requests"), :class => :label %>
+
+  <%= f.label :skip_issues_with_pr, t("activerecord.attributes.user.skip_issues_with_pr", :default => "Skip Issues with Pull requests"), :class => "label label-info" %>
   <%= f.check_box :skip_issues_with_pr, :class => 'checkbox' %>
+
+  <section id="user-favorite-langs">
+
+    <h4>Select your favorite languages </h4>
+
+    <%= hidden_field_tag "user[favorite_languages][]" %>
+    <% Repo.all_languages.each do |language| %>
+      <label class="checkbox">
+        <%= f.check_box :favorite_languages, { multiple: true }, language, nil %>
+        <%= language %>
+      </label>
+    <% end %>
+
+  </section>
+
 </div>
 
 <div class="form-actions">
-  <button class="btn primary" type="submit">Save</button> or
-	<%= link_to "Cancel", :back %>
+  <%= button_tag "Save", :class => "btn btn-success" %> or
+  <%= link_to "Cancel", :back, :class => "btn btn-danger" %>
 </div>
