Add remove repository
Allows users to have the option of removing their repositories from codetriage.

--- a/app/views/shared/_add_repos_list.html.slim
+++ b/app/views/shared/_add_repos_list.html.slim
@@ -16,6 +16,6 @@
             td #{repo["open_issues_count"]} issues
             td
               - if Repo.exists_with_name?(repo["full_name"])
-                p Added!
+                = link_to "Remove", repo, class: 'btn btn-mini btn-danger', method: :delete
               - else
                 = f.submit "Add", class: 'btn btn-mini btn-primary'
