--- a/app/views/application/_repos.html.slim
+++ b/app/views/application/_repos.html.slim
@@ -8,6 +8,9 @@
     - repos.group_by(&:language).each do |lang, repos|
       - unless lang == nil
         div class="tab-pane#{" active" if lang_index == 0}" id="#{lang.parameterize}#{lang.hash}"
+          = form_for :language_subscription, url: language_subscriptions_path do |f|
+            = f.hidden_field :language, value: lang
+            = f.submit "Subscribe to this Language", class: 'btn btn-mini btn-primary'
           ul.unstyled.repos-list = render repos
         - lang_index = lang_index + 1
 
