Set 50vh before scrolling appears

--- a/app/views/application/_repos.html.slim
+++ b/app/views/application/_repos.html.slim
@@ -20,5 +20,5 @@ javascript:
     if (hash) {
       $('.nav-tabs a[href='+hash+']').tab('show');
     }
-    $("#repos").slimscroll({height: '250px'});
+    $("#repos").slimscroll({height: '50vh'});
   });
