--- a/app/views/pages/index.html.slim
+++ b/app/views/pages/index.html.slim
@@ -11,8 +11,8 @@ hr
   h2 Repos you are currently helping
   p
     = render 'repo_subscriptions/list', repos_subs: @repos_subs
-    = link_to 'Find additional repos', repos_path, class: 'btn btn-success'
-    = link_to "Submit a Repo", new_repo_path, class: 'btn btn-success'
+    / = link_to 'Find additional repos', repos_path, class: 'btn btn-success'
+    / = link_to "Submit a Repo", new_repo_path, class: 'btn btn-success'
   hr
 h2 Repos needing the most help
 = render 'repos', repos: @repos
