--- a/app/views/pages/index.html.slim
+++ b/app/views/pages/index.html.slim
@@ -1,12 +1,12 @@
 - unless user_signed_in?
   .jumbotron
     h1 Help your favorite open source projects
-    p.lead Sign up to receive a different open issue in your inbox every day from your favorite GitHub repos
-    = link_to 'Sign up today', new_user_registration_path, class: 'btn btn-large btn-success'
+    p.lead Sign up to receive an open issue in your inbox every day from your favorite GitHub repos
+    = link_to 'Sign Up', new_user_registration_path, class: 'btn btn-large btn-success'
 
   .jumbotron
-    p.lead #{number_with_delimiter(User.count, delimiter: ',')} developers are working on #{Repo.count} open-source repos
-hr
+    p.lead #{number_with_delimiter(User.count, delimiter: ',')} developers are working on #{Repo.count} open-source repositories.
+
 - if @repos_subs.present?
   h2 Repos you are currently helping
   p
