--- a/app/views/repos/show.html.slim
+++ b/app/views/repos/show.html.slim
@@ -10,13 +10,30 @@ p= @repo.description
   
 p
   - if user_signed_in? && current_user.able_to_edit_repo?(@repo)
-    = link_to "Edit this repo ", edit_repo_path(@repo), class: 'btn btn-primary'
+    => link_to "Edit this repo ", edit_repo_path(@repo), class: 'btn btn-primary'
 
   - if @repo_sub
-    = link_to repo_subscription_path(@repo_sub), class: 'btn btn-danger', method: :delete, data: { confirm: 'Are you sure?' } do
+    => link_to repo_subscription_path(@repo_sub), class: 'btn btn-danger', method: :delete, data: { confirm: 'Are you sure?' } do
       i.icon-remove.icon-white>
       
       | Unsubscribe
+hr
+
+h3 align="center" Help Triage Issues!
+br
+  
+h4 When you volunteer to triage issues, you'll receive an email each day with a Github link to an open issue that needs help in this repo.
+      
+- if @repo_sub.blank?
+  = button_to "I want to Triage: #{@repo.path}", repo_subscriptions_path(repo_id: @repo.id), class: 'btn btn-primary btn-success', align:"center"
+- else
+  = link_to issue_assignments_path(id: @repo_sub.id), class: 'btn btn-success', align: "center", method: :post do
+    i.icon-envelope.icon-white 
+    | Receive new issue!
+  h3 align="center" Currently receiving #{@repo_sub.email_limit} issue(s) per day
+  = form_for(@repo_sub, html: {class: 'form-inline', align:"center"}) do |f|
+    => f.select :email_limit, (1..20)
+    = f.submit "Save", class: 'btn btn-success'
 
 hr
 
@@ -30,30 +47,13 @@ p
   = link_to pluralize(@repo.subscribers.count, 'Subscriber'), repo_subscribers_path(full_name: @repo.full_name)
 
 hr
+h3 #{@issues.total_entries} open issues in #{@repo.path}
 
-h2 Help Triage Issues!
-p
-  | When you volunteer to triage issues, you'll receive an email each day with a link to an open issue that needs help in this repo.
-    You'll also receive instructions on how to triage issues.
-
-- if @repo_sub.blank?
-  = button_to "I want to Triage: #{@repo.path}", repo_subscriptions_path(repo_id: @repo.id), class: 'btn btn-primary btn-success'
-- else
-  p
-    = link_to issue_assignments_path(id: @repo_sub.id), class: 'btn btn-success', method: :post do
-      i.icon-envelope.icon-white>
-      | Receive new issue!
-  p Currently receiving #{@repo_sub.email_limit} issues per day.
-  = form_for(@repo_sub, html: {class: 'form-inline'}) do |f|
-    => f.select :email_limit, (1..20)
-    = f.submit "Save", class: 'btn btn-success'
-
-hr
-h2 #{@issues.total_entries} open issues in #{@repo.path}
-
-.digg_pagination= will_paginate @issues, container: false
-br
 ul
   - @issues.each do |issue|
     li
       = link_to issue.title, issue.html_url
+
+.digg_pagination= will_paginate @issues, container: false
+
+hr
