--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -10,6 +10,7 @@ html
         = render "flashes"
         = yield
       .footer
+        = render "footer"
     - if Rails.env.production?
       /! google analytics
       javascript:
