--- a/app/views/application/_footer.html.slim
+++ b/app/views/application/_footer.html.slim
@@ -5,5 +5,4 @@
       <iframe src="https://ghbtns.com/github-btn.html?user=codetriage&repo=codetriage&type=watch&count=true&v=2" frameborder="0" scrolling="0" width="100px" height="20px"></iframe>
       <iframe src="https://ghbtns.com/github-btn.html?user=codetriage&repo=codetriage&type=star&count=true" frameborder="0" scrolling="0" width="100px" height="20px"></iframe>
       <iframe src="https://ghbtns.com/github-btn.html?user=codetriage&repo=codetriage&type=fork&count=true" frameborder="0" scrolling="0" width="100px" height="20px"></iframe>
-    .span4
-/ p.text-center Copyright ...
+    p.text-center &copy 2015 - CodeTriage
