--- a/app/views/application/_repos.html.slim
+++ b/app/views/application/_repos.html.slim
@@ -8,9 +8,13 @@
     - repos.group_by(&:language).each do |lang, repos|
       - unless lang == nil
         div class="tab-pane#{" active" if lang_index == 0}" id="#{lang.parameterize}#{lang.hash}"
-          = form_for :language_subscription, url: language_subscriptions_path do |f|
-            = f.hidden_field :language, value: lang
-            = f.submit "Subscribe to this Language", class: 'btn btn-mini btn-primary'
+          - subscription = user_subscribed_to_language? lang
+          - unless subscription
+            = form_for :language_subscription, url: language_subscriptions_path do |f|
+              = f.hidden_field :language, value: lang
+              = f.submit "Subscribe to this Language", class: 'btn btn-mini btn-primary'
+          - else
+            = link_to "Unsubscribe to this Language", language_subscription_path(subscription), method: :delete, class: 'btn btn-mini btn-danger',  confirm: 'Are you sure?'
           ul.unstyled.repos-list = render repos
         - lang_index = lang_index + 1
 
