Added search form for repo.

--- a/app/views/application/_nav.html.slim
+++ b/app/views/application/_nav.html.slim
@@ -11,3 +11,5 @@
         = link_to 'Sign in', new_user_registration_path
   h3.muted
     = link_to "CodeTriage", root_path
+
+= render :partial => 'repos/search'
