moved search bar

--- a/app/views/application/_nav.html.slim
+++ b/app/views/application/_nav.html.slim
@@ -13,4 +13,7 @@
   h3.muted
     = link_to "CodeTriage", root_path
 
-= render :partial => 'repos/search'
+    / = render :partial => 'repos/search'
+
+
+hr
