--- a/app/views/repos/_search.html.slim
+++ b/app/views/repos/_search.html.slim
@@ -1,5 +1,4 @@
-
-= form_tag(:controller => 'repos', :action => 'search', :method => "get", class: "navbar-form", id: "search-form") do
+= form_tag(:controller => 'repos', :action => 'search', :method => "get", class: "navbar", id: "search-form") do
   .input-append
-    = text_field_tag :search, params[:search], class: "span2", :size => 200, placeholder: "Search a repo..."
+    = text_field_tag :search, params[:search], class: "span10", :size => 200, placeholder: "Search a repo..."
     <button class="btn" type="submit"><i class="icon-search"></i></button>
